# thorvg-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  justfile
.github/workflows/: bare-metal.yml  ci.yml  fuzz.yml  release.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: accessor_for_each.rs  animation_picture_play.rs  asset_resolver.rs  canvas_set_target.rs  gradient_build.rs  lottie_audio_resolver.rs  lottie_load_and_play.rs  lottie_slots_assign.rs  paint_transforms.rs  picture_load_data.rs  picture_load_raw.rs  saver_save.rs  scene_effects.rs  shape_append_path.rs  shape_primitives.rs  text_glyph_metrics.rs
thorvg/: CHANGELOG.md  Cargo.toml
thorvg-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
thorvg-sys/docs/: bare_metal.md
thorvg-sys/picolibc-config/: README.md  picolibc.h  pthread.h  runtime_stubs.c
thorvg-sys/picolibc-config/runtime_stubs/: entropy.c  env.c  errno_bridge.c  hal.c  onexit.c  pthread.c
thorvg-sys/src/: lib.rs
thorvg/examples/: blending.rs  clipping.rs  gradient.rs  masking.rs  opacity.rs  paint_order.rs  paths.rs  picture_svg.rs  render_to_buffer.rs  scene.rs  scene_effects.rs  shapes.rs  stroke.rs  transforms.rs
thorvg/examples/common/: mod.rs
thorvg/src/: accessor.rs  animation.rs  canvas.rs  color.rs  error.rs  gradient.rs  lib.rs  lottie.rs  paint.rs  path.rs  picture.rs  saver.rs  scene.rs  shape.rs  tests.rs  text.rs
thorvg/tests/: integration.rs
thorvg/tests/assets/: README.md  audio_layer.json
