[package]
name = "thorvg-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
thorvg = { path = "../thorvg" }

# Standalone manifest so cargo-fuzz can pick its own target-dir without
# interfering with the parent workspace.
[workspace]

[[bin]]
name = "picture_load_data"
path = "fuzz_targets/picture_load_data.rs"
test = false
doc = false
bench = false

[[bin]]
name = "picture_load_raw"
path = "fuzz_targets/picture_load_raw.rs"
test = false
doc = false
bench = false

[[bin]]
name = "shape_append_path"
path = "fuzz_targets/shape_append_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "asset_resolver"
path = "fuzz_targets/asset_resolver.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lottie_load_and_play"
path = "fuzz_targets/lottie_load_and_play.rs"
test = false
doc = false
bench = false

[[bin]]
name = "text_glyph_metrics"
path = "fuzz_targets/text_glyph_metrics.rs"
test = false
doc = false
bench = false

[[bin]]
name = "shape_primitives"
path = "fuzz_targets/shape_primitives.rs"
test = false
doc = false
bench = false

[[bin]]
name = "paint_transforms"
path = "fuzz_targets/paint_transforms.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scene_effects"
path = "fuzz_targets/scene_effects.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gradient_build"
path = "fuzz_targets/gradient_build.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canvas_set_target"
path = "fuzz_targets/canvas_set_target.rs"
test = false
doc = false
bench = false

[[bin]]
name = "animation_picture_play"
path = "fuzz_targets/animation_picture_play.rs"
test = false
doc = false
bench = false

[[bin]]
name = "accessor_for_each"
path = "fuzz_targets/accessor_for_each.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lottie_slots_assign"
path = "fuzz_targets/lottie_slots_assign.rs"
test = false
doc = false
bench = false

[[bin]]
name = "saver_save"
path = "fuzz_targets/saver_save.rs"
test = false
doc = false
bench = false
