[package]
name = "thorvg-sys"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Raw FFI bindings to the ThorVG vector graphics library"
repository = "https://github.com/goyox86/thorvg-rs"
homepage = "https://github.com/goyox86/thorvg-rs"
documentation = "https://docs.rs/thorvg-sys"
categories = ["external-ffi-bindings", "graphics", "rendering"]
keywords = ["thorvg", "vector-graphics", "svg", "lottie", "ffi"]
links = "thorvg"

[features]
default = ["vendored"]
vendored = []

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"
