[package]
name = "thorvg-sys"
version = "1.0.5"
edition = "2024"
license = "MIT"
description = "Raw FFI bindings to the ThorVG vector graphics library"
readme = "README.md"
repository = "https://github.com/goyox86/thorvg-rs"
homepage = "https://github.com/goyox86/thorvg-rs"
documentation = "https://docs.rs/thorvg-sys"
categories = ["external-ffi-bindings", "graphics", "rendering"]
keywords = ["thorvg", "vector-graphics", "svg", "lottie", "ffi"]
links = "thorvg"
include = [
    "/LICENSE",
    "/build.rs",
    "/src/",
    # Vendored ThorVG: source, headers, build files, and licenses
    "thorvg/LICENSE",
    "thorvg/inc/**",
    "thorvg/**/*.cpp",
    "thorvg/**/*.h",
    "thorvg/**/*.c",
    "thorvg/**/LICENSE",
]

[features]
default = ["vendored", "lottie", "svg", "png", "fonts", "expressions", "threads", "file-io"]
vendored = []

# ── Loader features ──────────────────────────────────────────────
# Each loader adds the corresponding ThorVG source files and config
# define.  Disable defaults and pick what you need for embedded.
lottie      = []   # Lottie animation loader
svg         = []   # SVG loader
png         = []   # Built-in PNG loader (lodepng, no system dep)
fonts       = []   # SFNT / OTF / TTF font loaders

# ── Optional capabilities ────────────────────────────────────────
expressions = []   # Lottie expressions via JerryScript (~200 KB RAM)
threads     = []   # Multi-threaded TaskScheduler (std::thread)
file-io     = []   # Filesystem I/O APIs (Picture::load, etc.)

[build-dependencies]
bindgen = "0.71"
cc = "1"
pkg-config = "0.3"
