[package]
name = "thorvg"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Safe Rust bindings to the ThorVG vector graphics library"
readme = "../README.md"
repository = "https://github.com/goyox86/thorvg-rs"
homepage = "https://github.com/goyox86/thorvg-rs"
documentation = "https://docs.rs/thorvg"
categories = ["graphics", "rendering", "no-std"]
keywords = ["thorvg", "vector-graphics", "svg", "lottie", "canvas"]

[features]
default = ["std"]
std = []

[dependencies]
thorvg-sys = { path = "../thorvg-sys", version = "1.0.1" }

[dev-dependencies]
png = "0.17"
